--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Levels/TestLevel.TestLevel
 EditorStartupMap=/Game/Levels/TestLevel.TestLevel
+GlobalDefaultGameMode=/Script/ShootThemUp.STUGameModeBase
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
