Add level selection and quit game functionality

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -78,3 +78,6 @@ r.DefaultFeature.AutoExposure=False
 [/Script/GameplayDebugger.GameplayDebuggerConfig]
 ActivationKey=F10
 
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/ShootThemUp.STULevelItemWidget.LevelSelectionButton",NewName="/Script/ShootThemUp.STULevelItemWidget.LevelSelectButton")
