Add interface animations and level preloader. (STABLE BUILD)

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Menu/MenuLevel.MenuLevel
-EditorStartupMap=/Game/Menu/MenuLevel.MenuLevel
+EditorStartupMap=/Game/Levels/TestLevel.TestLevel
 GlobalDefaultGameMode=/Script/ShootThemUp.STUGameModeBase
 GameInstanceClass=/Game/BP_STUGameInstance.BP_STUGameInstance_C
 
@@ -81,3 +81,4 @@ ActivationKey=F10
 
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/ShootThemUp.STULevelItemWidget.LevelSelectionButton",NewName="/Script/ShootThemUp.STULevelItemWidget.LevelSelectButton")
+
