Add sound on/off functionality

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -82,3 +82,6 @@ ActivationKey=F10
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/ShootThemUp.STULevelItemWidget.LevelSelectionButton",NewName="/Script/ShootThemUp.STULevelItemWidget.LevelSelectButton")
 
+[/Script/Engine.AudioSettings]
+DefaultSoundClassName=/Game/Sounds/Settings/SC_Master.SC_Master
+
